# ControlUnitLogicOperator

./: .clangd  .gitmodules  Doxyfile  Readme.md  flash.sh  pre-commit
doc/board_specification/: specification_document
instances/aurix_375_lte/: .clangd  .cproject  .gitignore  .project  Cpu0_Main.c  Cpu1_Main.c  Cpu2_Main.c
instances/aurix_375_lte/TriCore Debug (TASKING)/: TASKING_C_C___Compiler-Include_paths__-I_.opt  makefile  sources.mk  subdir.mk
instances/aurix_375_lte/TriCore Release (TASKING)/: TASKING_C_C___Compiler-Include_paths__-I_.opt  flash.sh  makefile  sources.mk  subdir.mk
instances/aurix_375_lte/aurix_mcu_src/: .cproject  .gitignore  Cpu0_Main.c  Cpu1_Main.c  Cpu2_Main.c
instances/aurix_375_lte/hardware_src/: .project  Cpu1_Main.c  Cpu2_Main.c  driver_src
instances/aurix_375_lte/tests/: add_test.sh  board_ports.txt  run_tests.sh
instances/linux/: CMakeLists.txt  libgpiod  linux_board  main.c  run.sh
lib/: Cmemory
lib/board_dbc/: can1.c  can1.h  can2.c  can2.h  can3.c  can3.h  refresh_dbc.sh
lib/raceup_board/components/: board_architecture.h  can.h  component.h  ethernet.h  gpio.h  interrupt.h  pwm.h  serial.h  timer.h  trap.h
lib/rigen_fun_simulink22_ert_rtw/: rigen_fun_simulink22.c  rigen_fun_simulink22.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h
src/: ControlUnitLogicOperator.c  ControlUnitLogicOperator.h  Makefile  src.h
src/DV/: dv.c  dv.h
src/DV/asb/: asb.c  asb.h
src/DV/asms/: asms.c  asms.h
src/DV/dv_status/: dv_status.c  dv_status.h
src/DV/res/: res.c  res.h
src/DV/steering_wheel_alg/: stw_alg.c  stw_alg.h
src/GIEI/: engine_common.h  engine_interface.h  giei.c  giei.h
src/GIEI/amk/: amk.c  amk.h
src/GIEI/power_control/: power_control.c  power_control.h
src/GIEI/power_maps/: power_maps.c  power_maps.h
src/GIEI/rege_alg/: regen_alg.c  regen_alg.h
src/GIEI/speed_alg/: speed_alg.c  speed_alg.h
src/GIEI/torque_vec_alg/: torque_vec_alg.c  torque_vec_alg.h
src/IMU/: imu.c  imu.h
src/alive_blink/: alive_blink.c  alive_blink.h
src/batteries/: batteries.h
src/batteries/hv/: hv.c  hv.h
src/batteries/lv/: lv.c  lv.h
src/board_can/: board_can.c  board_can.h
src/board_can/can_freq_check/: can_freq_check.c  can_freq_check.h
src/board_conf/: id_conf.h
src/board_conf/can/: can.h
src/board_conf/gpio/: gpio.h
src/board_conf/interrupt/: interrupt.h
src/board_conf/trap/: trap.h
src/car_status/: car_status.c  car_status.h
src/cooling/: cooling.h
src/cooling/fans/: fans.c  fans.h
src/cooling/pumps/: pumps.c  pumps.h
src/cooling/temperatures/: temperatures.c  temperatures.h
src/core_0/: core_0.c
src/core_0/IO_id_0/: IO_id_0.h
src/core_0/giei/: giei.c  giei.h
src/core_1/: core_1.c  core_1.h
src/core_2/: core_2.c  core_2.h
src/core_status/: core_status.c
src/cores/: Makefile  cores.h
src/cores/alive_blink/: alive_blink.c  alive_blink.h
src/cores/board_conf/: id_conf.h
src/cores/core_0/: Makefile  core0.c  core0.h  core_0.c
src/cores/core_1/: Makefile  core1.c  core1.h  core_1.c
src/cores/core_2/: Makefile  core2.c  core2.h  core_2.c
src/cores/core_status/: core_status.c  core_status.h
src/cores/core_utility/: core_utility.h
src/driver_input/: driver_input.c  driver_input.h
src/driver_input/input_rtd/: input_rtd.c  input_rtd.h
src/emergency_fault/: emergency_fault.c  emergency_fault.h
src/emergency_module/: emergency_module.c  emergency_module.h
src/fans/: fans.c  fans.h
src/hv/: hv.c  hv.h
src/imu/: imu.h
src/log/: log.c  log.h
src/log/log_pool/: log_pool.c  log_pool.h
src/log/sd/: sd.c  sd.h
src/log/telemetry/: telemetry.c  telemetry.h
src/missions/: missons.c  missons.h
src/pumps/: pumps.h
src/suspensions/: suspensions.c  suspensions.h
src/utility/: utility.h
src/utility/arithmetic/: arithmetic.c  arithmetic.h
tests/: Readme.md  add_test.sh  list_tests.sh  rm_test.sh  run_tests.sh  setup_test_env.sh
tests/.dummy/: CMakeLists.txt  CMakeLists_template.txt  Makefile  main.c
tests/car_component/: car_component.c  car_component.h  external_gpio.h  new_car_component.sh
tests/car_component/.dummy/: dummy.c  dummy.h
tests/car_component/amk_inverter/: amk_inverter.c  amk_inverter.h
tests/car_component/asb/: asb.c  asb.h
tests/car_component/atc/: atc.c  atc.h
tests/car_component/bms_hv/: bms_hv.c  bms_hv.h
tests/car_component/ebs/: ebs.c  ebs.h
tests/car_component/embedded_system/: embedded_system.c  embedded_system.h
tests/car_component/imu/: imu.c  imu.h
tests/car_component/pcu/: pcu.c  pcu.h
tests/car_component/res_node/: res_node.c  res_node.h
tests/car_component/sdc_circuit/: sdc_circuit.c  sdc_circuit.h
tests/car_component/steering_wheel/: steering_wheel.c  steering_wheel.h
tests/libgpiod/: libgpiod.so.3.1.1
tests/libgpiod/include/: Makefile  Makefile.in
tests/linux_board/: components  linux_board.h
tests/linux_board/can/: Makefile  can.c  can.h
tests/linux_board/ethernet/: ethernet.c  ethernet.h
tests/linux_board/gpio/: Makefile  gpio.c  gpio.h
tests/linux_board/interrup/: interrupt.c
tests/linux_board/interrupt/: interrupt.c  interrupt.h
tests/linux_board/serial/: Makefile  serial.c
tests/linux_board/timer/: Makefile  timer.c  timer.h
tests/linux_board/trap/: trap.c  trap.h
tests/score_lib/: Makefile
tests/tests/amk/: main.c
tests/tests/amk_module/: CMakeLists_template.txt  main.c
tests/tests/as_node/: main.c
tests/tests/bst_tree/: main.c
tests/tests/can_emulation/: main.c
tests/tests/can_freq_check/: main.c
tests/tests/compile_test/: CMakeLists_template.txt  main.c
tests/tests/cooling/: main.c
tests/tests/core_0_alive_switch/: CMakeLists.txt  main.c
tests/tests/core_0_driver_input/: main.c
tests/tests/core_0_full/: main.c
tests/tests/core_0_mission/: CMakeLists_template.txt
tests/tests/core_1_alive_switch/: CMakeLists.txt  main.c
tests/tests/core_2_alive_switch/: CMakeLists.txt  main.c
tests/tests/core_2_driver_input/: main.c
tests/tests/ebs/: main.c
(+1016 files in other folders)
